# dataset-editor

./: .gitignore  LICENSE  README.md  pyproject.toml
dataset_editor/: __add_path.py  __main__.py  break_nest.py  choice_random.py  delete.py  diff_copy.py  extract_latest.py  group_histgram.py  intersection.py  mkdirs_for_rsync_dataset.py  move_into.py  numbering_filename.py  reduce.py  repair_renamed_imgs.py  separate_dataset_and_mkdir.py  separate_traindata.py
scripts/: dataset_editor.sh  make_bashfile.sh
