[tool.poetry]
name = "dataset-editor"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara <kakikaku.fukuhara@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.9"
tqdm = "^4.64.0"
natsort = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
